@@ -1,8 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Sound Juicer CD Extractor
-_GenericName=CD Extractor
-_Comment=Extract music from your CDs
+_Name=Audio CD Extractor
+_Comment=Copy music from your CDs
 Exec=sound-juicer
 Icon=sound-juicer
 StartupNotify=true
