@@ -1,5 +1,10 @@
 2008-01-05  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.desktop.in.in:
+	Remove Sound Juicer from the desktop file (#336727).
+
+2008-01-05  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-play.c:
 	Pause the pipeline when switching track, so the first playback
 	seeks to the correct track. (#507166, thank Bill O'Shea).
